gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag11727.d
version https://git-lfs.github.com/spec/v1
oid sha256:e589303e26f08ec9290a0b6033cd71986cc8c8676f34010c8f05f97df6a5af2f
size 507
